--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/push_swap",
-			"args": ["35", "47", "30", "22", "98"],
+			"args": ["345", "-567", "32943", "-123", "-8958", "90384", "-23413"],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
