--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,16 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/push_swap",
-			"args": ["234", "6546", "1234", "-546", "2332", "098547", "234768", "5436", "22409", "54687", "345", "32476534", "3456", "54606", "350879"],
+			"args": ["0", "-1", "1", "2", "3"],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
+			"linux": {
+				"MIMode": "gdb",
+				"miDebuggerPath": "/usr/bin/gdb"
+			  },
 			"setupCommands": [
 				{
 					"description": "Enable pretty-printing for gdb",
